--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-app",
+  "name": "aqi-app",
   "version": "0.1.0",
   "description": "",
   "keywords": [],
@@ -59,6 +59,9 @@
     "start": "cross-env NODE_ENV=development webpack serve --mode development --progress"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.10",
     "axios": "^1.3.4",
     "node-cache": "^5.1.2",
     "react-refresh": "^0.14.0"
